@@ -11,6 +11,7 @@ v 8.12.2 (unreleased)
   - Fix snippets pagination
   - Fix List-Unsubscribe header in emails
   - Fix an issue with the "Commits" section of the cycle analytics summary. !6513
+  - Fix errors importing project feature and milestone models using GitLab project import
 
 v 8.12.1
   - Fix a memory leak in HTML::Pipeline::SanitizationFilter::WHITELIST
